--- a/goods/goods-dev.properties
+++ b/goods/goods-dev.properties
@@ -9,7 +9,7 @@ spring.datasource.minIdle=5
 spring.datasource.maxActive=20  
 spring.datasource.maxWait=60000  
 
-#mybatis-plus.mapper-locations=classpath*:mapper/*Mapper.xml
+mybatis-plus.mapper-locations=classpath*:mapper/*Mapper.xml
 #mybatis-plus.type-aliases-package=com.baye.goods.entity
 mybatis-plus.db-config.logic-delete-value=1 
 mybatis-plus.db-config.logic-not-delete-value=1 
